<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/percent_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:layout_marginTop="-9dp"
        android:layout_marginBottom="-9dp"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/white"
        android:text="@string/percentage_placeholder"
        android:textSize="58sp" />

    <TextView
        android:id="@+id/percent_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/percent_value"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/white"
        android:text="@string/percentage_symbol"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/peoples_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/percent_value"
        android:fontFamily="@font/ubuntu_light"
        android:layout_marginStart="1dp"
        android:textColor="@color/white"
        android:text="@string/amount_placeholder"
        android:textSize="18sp" />

</RelativeLayout>