<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:background="@color/transparent"
        android:fontFamily="@font/ubuntu_medium"
        android:maxLines="6"
        android:text="@string/add_choice_header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/header_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/header_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <EditText
        android:id="@+id/new_first_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/choice_top_half"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/add_choice_first_text_hint"
        android:maxLength="150"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/new_last_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_guideline" />

    <EditText
        android:id="@+id/new_last_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/choice_bottom_half"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:hint="@string/add_choice_last_text_hint"
        android:maxLength="150"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_first_text" />

    <Button
        android:id="@+id/or_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/or_delimiter"
        android:textColor="@color/gradient_center"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_guideline" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_send"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/add_choice_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>