<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/report_result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/report_result_header"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/report_result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_result_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu_light"
        android:maxWidth="360dp"
        android:text="@string/report_result_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_result_description"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/report_separator" />

        <TextView
            android:id="@+id/report_result_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="@font/ubuntu_regular"
            android:paddingStart="5dp"
            android:paddingTop="8dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/report_result_ok"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>
</RelativeLayout>