<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/report_background">

    <ImageButton
        android:id="@+id/report_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_report" />

    <TextView
        android:id="@+id/report_result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/report_result_header"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/report_result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_result_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="@string/report_result_description"
        android:textAlignment="center"
        android:maxWidth="360dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_result_description"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/report_separator" />

        <TextView
            android:id="@+id/report_result_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="@font/sf_ui_display_medium"
            android:paddingStart="5dp"
            android:paddingTop="8dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/report_result_ok"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="17sp" />
    </LinearLayout>
</RelativeLayout>