<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/f_first_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/choice_top_half"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/f_first_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/choice_placeholder"
            android:textAppearance="?android:textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/f_first_stat"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/f_first_percent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="-9dp"
                android:layout_marginBottom="-9dp"
                android:fontFamily="@font/sf_ui_display_bold"
                android:text="@string/percentage_placeholder"
                android:textSize="58sp" />

            <TextView
                android:id="@+id/f_first_percent_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/f_first_percent_value"
                android:includeFontPadding="false"
                android:fontFamily="@font/sf_ui_display_medium"
                android:text="@string/percentage_symbol"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/f_first_peoples_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_first_percent_value"
                android:fontFamily="@font/sf_ui_display_light"
                android:text="@string/amount_placeholder"
                android:textSize="18sp" />

        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/f_last_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/choice_bottom_half"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/f_last_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/choice_placeholder"
            android:textAppearance="?android:textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/f_last_stat"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/f_last_percent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="-9dp"
                android:layout_marginBottom="-9dp"
                android:fontFamily="@font/sf_ui_display_bold"
                android:text="@string/percentage_placeholder"
                android:textSize="58sp" />

            <TextView
                android:id="@+id/f_last_percent_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/f_last_percent_value"
                android:includeFontPadding="false"
                android:fontFamily="@font/sf_ui_display_medium"
                android:text="@string/percentage_symbol"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/f_last_peoples_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/f_last_percent_value"
                android:fontFamily="@font/sf_ui_display_light"
                android:text="@string/amount_placeholder"
                android:textSize="18sp" />

        </RelativeLayout>

    </FrameLayout>


</LinearLayout>