<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/c_first_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choice_top_half"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/c_first_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="6dp"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/sf_ui_display_light"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/choice_placeholder"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="18sp"
            android:layout_toStartOf="@id/c_first_stat"/>

        <RelativeLayout
            android:id="@+id/c_first_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/c_first_percent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_bold"
                android:includeFontPadding="false"
                android:text="@string/percentage_placeholder"
                android:textColor="@color/percentage_stat"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/c_first_percent_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/c_first_percent_value"
                android:fontFamily="@font/sf_ui_display_medium"
                android:includeFontPadding="false"
                android:text="@string/percentage_symbol"
                android:textColor="@color/percentage_symbol"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/c_first_peoples_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/c_first_percent_value"
                android:fontFamily="@font/sf_ui_display_light"
                android:text="@string/amount_placeholder"
                android:textColor="@color/amount_stat"
                android:textSize="10sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/c_last_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/choice_bottom_half">

        <TextView
            android:id="@+id/c_last_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="6dp"
            android:ellipsize="end"
            android:fontFamily="@font/sf_ui_display_light"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/choice_placeholder"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="18sp"
            android:layout_toStartOf="@id/c_last_stat"/>

        <RelativeLayout
            android:id="@+id/c_last_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/c_last_percent_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_bold"
                android:includeFontPadding="false"
                android:text="@string/percentage_placeholder"
                android:textColor="@color/percentage_stat"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/c_last_percent_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/c_last_percent_value"
                android:fontFamily="@font/sf_ui_display_medium"
                android:includeFontPadding="false"
                android:text="@string/percentage_symbol"
                android:textColor="@color/percentage_symbol"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/c_last_peoples_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/c_last_percent_value"
                android:fontFamily="@font/sf_ui_display_light"
                android:text="@string/amount_placeholder"
                android:textColor="@color/amount_stat"
                android:textSize="10sp" />

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>